--- a/user-service/src/main/resources/templates/cryptos/crypto.html
+++ b/user-service/src/main/resources/templates/cryptos/crypto.html
@@ -64,7 +64,7 @@
             <div class="comment-text" th:text="${comment.text}">Comment text...</div>
         </div>
         <div class="form-container">
-            <form th:action="@{'/user-api/crypto/name/' + ${crypto.name} + '/comments/add-comment'}"
+            <form th:action="@{'/user-api/crypto/' + ${crypto.name} + '/comments/add-comment'}"
                   method="post" enctype="application/x-www-form-urlencoded">
                 <input type="hidden" th:name="${_csrf.parameterName}" value="${_csrf.token}" />
                 <textarea id="text" name="text" rows="4" placeholder="Add a comment..." required></textarea>
